# arcviz

./: README.md  flake.nix  requirements.md
.github/workflows/: pages.yml
arcviz/: .gitignore  Cargo.toml
arcviz/src/: lib.rs
arcviz/src/adapters/: mod.rs
arcviz/src/adapters/geo/: coord.rs
arcviz/src/adapters/ncollide/: aabb.rs  mod.rs  to_css.rs
arcviz/src/common/: bounds.rs  mod.rs  vector.rs
arcviz/src/io/: mod.rs
arcviz/src/io/dto/: mod.rs
arcviz/src/io/ipe/: arc_template.ipe  export_template.ipe  ipe_exporter.rs  mod.rs  vertex_template.ipe
arcviz/src/model/: arc.rs  classes.rs  connection.rs  connections.rs  data.rs  mod.rs  settings.rs  vertex.rs  vertices.rs
arcviz/src/render/: mod.rs  render_target.rs  stage.rs
arcviz/src/render/resources/: handle.rs  mod.rs  provider.rs  registry.rs  resource.rs
arcviz/src/ui/: app.rs  background.rs  bar.rs  bar_choice.rs  canvas_stage.rs  canvas_target.rs  conflict_view.rs  hand_dispatcher.rs  mod.rs  selection_frame.rs  settings_view.rs  tool_dispatcher.rs  workspace.rs  workspace_context.rs
electron-wrapper/: electron-builder.yml  main.mjs  package.json  preload.js
static/: icons.mjs  index.html  index.mjs  wasm.mjs
static/heroicons/: icons.html
static/style/: base.sass  reset.sass  styles.sass
